--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "eslint-plugin-import": "^2.25.4",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "cpf-cnpj-validator": "^1.0.3",
+    "joi": "^17.6.0"
   }
 }
